<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.portfolio.ergobot.myportfolioapp.MainActivity">

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle_message"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_above="@+id/popularmovies"/>

    <Button
        android:id="@+id/popularmovies"
        android:layout_width="@dimen/button_max_width"
        android:layout_height="wrap_content"
        android:layout_above="@+id/stockhawk"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name_popularmovies"
        android:onClick="openApplication"
        />

    <Button
        android:id="@+id/stockhawk"
        android:layout_width="@dimen/button_max_width"
        android:layout_height="wrap_content"
        android:layout_above="@+id/builditbigger"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name_stockhawk"
        android:onClick="openApplication"
        />

    <Button
        android:id="@+id/builditbigger"
        android:layout_width="@dimen/button_max_width"
        android:layout_height="wrap_content"
        android:layout_above="@+id/makeyourappmaterial"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name_builditbigger"
        android:onClick="openApplication"
        />

    <Button
        android:id="@+id/makeyourappmaterial"
        android:layout_width="@dimen/button_max_width"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/app_name_makeyourappmaterial"
        android:onClick="openApplication"
        />
    <Button
        android:id="@+id/goubiquitous"
        android:layout_width="@dimen/button_max_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/makeyourappmaterial"
        android:text="@string/app_name_goubiquitous"
        android:onClick="openApplication"
        />
    <Button
        android:id="@+id/capstone"
        android:layout_width="@dimen/button_max_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/goubiquitous"
        android:text="@string/app_name_capstone"
        android:onClick="openApplication"
        />

</RelativeLayout>
